// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-select Clearable 1`] = `
<div
  class="m-base-select m-select"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Fruits
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Default Story 1`] = `
<div
  class="m-base-select m-select"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Fruits
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  placeholder="Choose a fruit"
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Disabled Item Selected With Label 1`] = `
<div
  class="m-base-select m-select m--is-disabled"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--is-label-up m--is-disabled m--has-label m--has-value m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Fruits
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  disabled="disabled"
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  disabled="disabled"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Disabled Item Selected With Label Clearable 1`] = `
<div
  class="m-base-select m-select m--is-disabled"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--is-label-up m--is-disabled m--has-label m--has-value m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Fruits
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  disabled="disabled"
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  disabled="disabled"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Disabled No Selection No Label 1`] = `
<div
  class="m-base-select m-select m--is-disabled"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--is-disabled m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  disabled="disabled"
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  disabled="disabled"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Disabled No Selection No Label With Placeholder 1`] = `
<div
  class="m-base-select m-select m--is-disabled"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--is-disabled m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  disabled="disabled"
                  placeholder="Choose a fruit"
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  disabled="disabled"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Disabled No Selection With Label 1`] = `
<div
  class="m-base-select m-select m--is-disabled"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--is-disabled m--has-label m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Fruits
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  disabled="disabled"
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  disabled="disabled"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Disabled No Selection With Label With Placeholder 1`] = `
<div
  class="m-base-select m-select m--is-disabled"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--is-disabled m--has-label m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Fruits
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  disabled="disabled"
                  placeholder="Choose a fruit"
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  disabled="disabled"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Focus 1`] = `
<div
  class="m-base-select m-select"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--has-cursor-pointer m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Label 1`] = `
<div
  class="m-base-select m-select"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Fruits
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Label Up 1`] = `
<div
  class="m-base-select m-select"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--is-label-up m--has-cursor-pointer m--has-label m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Fruits
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Long Option Menu 1`] = `
<div
  class="m-base-select m-select"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Fruits
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Placeholder 1`] = `
<div
  class="m-base-select m-select"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--has-cursor-pointer m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  placeholder="Choose a Fruit"
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Readonly Item Selected With Label 1`] = `
<div
  class="m-base-select m-select m--is-readonly"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--is-readonly m--is-label-up m--has-label m--has-value m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Fruits
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Readonly Item Selected With Label Clearable 1`] = `
<div
  class="m-base-select m-select m--is-readonly"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--is-readonly m--is-label-up m--has-label m--has-value m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Fruits
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Readonly No Selection No Label 1`] = `
<div
  class="m-base-select m-select m--is-readonly"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--is-readonly m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Readonly No Selection No Label With Placeholder 1`] = `
<div
  class="m-base-select m-select m--is-readonly"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--is-readonly m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  placeholder="Choose a fruit"
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Readonly No Selection With Label 1`] = `
<div
  class="m-base-select m-select m--is-readonly"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--is-readonly m--has-label m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Fruits
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Readonly No Selection With Label With Placeholder 1`] = `
<div
  class="m-base-select m-select m--is-readonly"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--is-readonly m--has-label m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Fruits
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  placeholder="Choose a fruit"
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select State 1`] = `
<div>
  <div
    class="m-base-select m-select m--is-disabled"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-input-style m--is-disabled m--has-label m--is-tag-default"
        max-width="288px"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="m-select-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Disabled
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <div>
                  <input
                    disabled="disabled"
                    readonly="readonly"
                  />
                </div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                 
                <div
                  class="m-select__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-select__icon-arrow"
                    disabled="disabled"
                    height="12px"
                    title="Ouvrir la liste déroulante"
                    width="12px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="m-input-style__append"
          />
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-select__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-select m--is-readonly"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-input-style m--is-readonly m--has-label m--is-tag-default"
        max-width="288px"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="m-select-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Readonly
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <div>
                  <input
                    readonly="readonly"
                  />
                </div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                 
                <div
                  class="m-select__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-select__icon-arrow"
                    height="12px"
                    title="Ouvrir la liste déroulante"
                    width="12px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="m-input-style__append"
          />
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-select__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-select m--is-waiting"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-input-style m--is-waiting m--has-cursor-pointer m--has-label m--is-tag-default"
        max-width="288px"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="m-select-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Waiting
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <div>
                  <input
                    readonly="readonly"
                  />
                </div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                 
                <div
                  class="m-select__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-select__icon-arrow"
                    height="12px"
                    title="Ouvrir la liste déroulante"
                    width="12px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <div
                  class="m-spinner m-input-style__spinner"
                >
                  <!---->
                   
                  <div />
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="m-input-style__append"
          />
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-select__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
  <br />
   
  <div
    class="m-base-select m-select m--is-disabled"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-input-style m--is-disabled m--has-label m--is-tag-default"
        max-width="288px"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="m-select-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Disabled and error
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <div>
                  <input
                    disabled="disabled"
                    readonly="readonly"
                  />
                </div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                 
                <div
                  class="m-select__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-select__icon-arrow"
                    disabled="disabled"
                    height="12px"
                    title="Ouvrir la liste déroulante"
                    width="12px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="m-input-style__append"
          />
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-select__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-select m--is-readonly m--has-validation-message"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-input-style m--is-readonly m--has-error m--has-label m--is-tag-default"
        max-width="288px"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="m-select-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Readonly and error
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <div>
                  <input
                    readonly="readonly"
                  />
                </div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                 
                <div
                  class="m-select__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-select__icon-arrow"
                    height="12px"
                    title="Ouvrir la liste déroulante"
                    width="12px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="m-input-style__append"
          />
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-select__validation-message"
    >
      <p
        class="m-validation-message__error"
      >
        <svg
          class="m-icon m-validation-message__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          Error
        </span>
      </p>
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-select m--is-waiting m--has-validation-message"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-input-style m--is-waiting m--has-cursor-pointer m--has-error m--has-label m--is-tag-default"
        max-width="288px"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="m-select-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Waiting and error
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <div>
                  <input
                    readonly="readonly"
                  />
                </div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                 
                <div
                  class="m-select__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-select__icon-arrow"
                    height="12px"
                    title="Ouvrir la liste déroulante"
                    width="12px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <div
                  class="m-spinner m-input-style__spinner"
                >
                  <!---->
                   
                  <div />
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="m-input-style__append"
          />
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-select__validation-message"
    >
      <p
        class="m-validation-message__error"
      >
        <svg
          class="m-icon m-validation-message__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          Error
        </span>
      </p>
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
  <br />
   
  <div
    class="m-base-select m-select m--is-disabled m--is-readonly"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-input-style m--is-readonly m--is-disabled m--has-label m--is-tag-default"
        max-width="288px"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="m-select-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Disabled and readonly
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <div>
                  <input
                    disabled="disabled"
                    readonly="readonly"
                  />
                </div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                 
                <div
                  class="m-select__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-select__icon-arrow"
                    disabled="disabled"
                    height="12px"
                    title="Ouvrir la liste déroulante"
                    width="12px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="m-input-style__append"
          />
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-select__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-select m--is-disabled m--is-waiting"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-input-style m--is-disabled m--is-waiting m--has-label m--is-tag-default"
        max-width="288px"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="m-select-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Disabled and waiting
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <div>
                  <input
                    disabled="disabled"
                    readonly="readonly"
                  />
                </div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                 
                <div
                  class="m-select__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-select__icon-arrow"
                    disabled="disabled"
                    height="12px"
                    title="Ouvrir la liste déroulante"
                    width="12px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <div
                  class="m-spinner m-input-style__spinner"
                >
                  <!---->
                   
                  <div />
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="m-input-style__append"
          />
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-select__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-select m--is-readonly m--is-waiting"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-input-style m--is-readonly m--is-waiting m--has-label m--is-tag-default"
        max-width="288px"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="m-select-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Readonly and waiting
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <div>
                  <input
                    readonly="readonly"
                  />
                </div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                 
                <div
                  class="m-select__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-select__icon-arrow"
                    height="12px"
                    title="Ouvrir la liste déroulante"
                    width="12px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <div
                  class="m-spinner m-input-style__spinner"
                >
                  <!---->
                   
                  <div />
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="m-input-style__append"
          />
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-select__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-base-select m-select m--is-disabled m--is-readonly m--is-waiting"
  >
    <div
      class="m-base-select__popup"
      style="width: 288px;"
    >
      <div
        class="m-input-style m--is-readonly m--is-disabled m--is-waiting m--has-label m--is-tag-default"
        max-width="288px"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="m-select-fakeId"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Disabled readonly and waiting
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <div>
                  <input
                    disabled="disabled"
                    readonly="readonly"
                  />
                </div>
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                 
                <div
                  class="m-select__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-select__icon-arrow"
                    disabled="disabled"
                    height="12px"
                    title="Ouvrir la liste déroulante"
                    width="12px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <div
                  class="m-spinner m-input-style__spinner"
                >
                  <!---->
                   
                  <div />
                </div>
              </div>
            </div>
          </div>
           
          <div
            class="m-input-style__append"
          />
        </div>
      </div>
    </div>
     
    <div
      class="m-validation-message m-select__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-select Virtual Scroll 1`] = `
<div
  class="m-base-select m-select"
>
  <div
    class="m-base-select__popup"
    style="width: 288px;"
  >
    <div
      class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
      max-width="288px"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="m-select-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Longlist
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <div>
                <input
                  readonly="readonly"
                />
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
               
              <div
                class="m-select__icon"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-select__icon-arrow"
                  height="12px"
                  title="Ouvrir la liste déroulante"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-validation-message m-select__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;
